--- a/desktopApp/src/main/resources/view/create/createLtqWindow/main.fxml
+++ b/desktopApp/src/main/resources/view/create/createLtqWindow/main.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.VBox?>
@@ -8,9 +9,20 @@
     <GridPane fx:id="root">
 
     </GridPane>
+    <Button fx:id="editBodyQuestion" alignment="CENTER" contentDisplay="CENTER" prefHeight="25.0" prefWidth="150.0" text="Редактировать" textAlignment="CENTER">
+        <font>
+            <Font size="16.0" />
+        </font>
+      <VBox.margin>
+         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+      </VBox.margin>
+    </Button>
     <Button fx:id="submit" alignment="CENTER" contentDisplay="CENTER" prefHeight="25.0" prefWidth="150.0" text="Ок" textAlignment="CENTER">
       <font>
          <Font size="16.0" />
       </font>
+      <VBox.margin>
+         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+      </VBox.margin>
     </Button>
 </VBox>
