--- a/desktopApp/src/main/resources/view/task/radioWindow/main.fxml
+++ b/desktopApp/src/main/resources/view/task/radioWindow/main.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
@@ -13,6 +14,26 @@
     <VBox fx:id="root" alignment="TOP_CENTER">
 
     </VBox>
+   <HBox fx:id="controlPanel" alignment="CENTER" prefHeight="0.0" prefWidth="800.0">
+      <children>
+         <Button fx:id="createItemButton" mnemonicParsing="false" text="Создать">
+            <font>
+               <Font size="14.0" />
+            </font>
+            <HBox.margin>
+               <Insets left="5.0" right="5.0" />
+            </HBox.margin>
+         </Button>
+         <Button fx:id="deleteItemButton" mnemonicParsing="false" text="Удалить">
+            <font>
+               <Font size="14.0" />
+            </font>
+            <HBox.margin>
+               <Insets left="5.0" right="5.0" />
+            </HBox.margin>
+         </Button>
+      </children>
+   </HBox>
     <HBox alignment="CENTER" HBox.hgrow="ALWAYS">
         <Button fx:id="submit" text="Ответ">
             <font>
