--- a/desktopApp/src/main/resources/view/task/textWindow/main.fxml
+++ b/desktopApp/src/main/resources/view/task/textWindow/main.fxml
@@ -2,7 +2,7 @@
 
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
 <?import kurlyk.view.components.MyHtmlEditor?>
@@ -13,7 +13,7 @@
         </MyHtmlEditor>
     </HBox>
     <VBox fx:id="root" alignment="TOP_CENTER">
-        <TextField fx:id="inputField" VBox.vgrow="ALWAYS"/>
+        <TextArea fx:id="inputArea" VBox.vgrow="ALWAYS"/>
     </VBox>
     <HBox alignment="CENTER" HBox.hgrow="ALWAYS">
         <Button fx:id="submit" text="Ответ">
