--- a/desktopApp/src/main/resources/view/showResultWindow/main.fxml
+++ b/desktopApp/src/main/resources/view/showResultWindow/main.fxml
@@ -7,7 +7,7 @@
     <VBox alignment="TOP_CENTER">
       <AnchorPane prefHeight="37.0" prefWidth="800.0">
          <children>
-            <Label fx:id="resultLabel" alignment="TOP_LEFT" layoutX="357.0" layoutY="8.0" prefHeight="17.0" prefWidth="87.0" text="Результат">
+            <Label fx:id="resultLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="191.0" layoutY="8.0" prefHeight="21.0" prefWidth="418.0" text="Результат" textAlignment="CENTER">
                <font>
                   <Font size="15.0" />
                </font>
