Каменный дом - солёный генерал

--- a/desktopApp/src/main/resources/view/task/computerSystemDiagramWindow/main.fxml
+++ b/desktopApp/src/main/resources/view/task/computerSystemDiagramWindow/main.fxml
@@ -7,11 +7,13 @@
 <?import kurlyk.view.components.fields.DoubleField?>
 <?import kurlyk.view.components.MyHtmlEditor?>
 <VBox xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kurlyk.view.task.computerSystemDiagramWindow.ComputerSystemDiagramController">
-    <HBox>
-        <MyHtmlEditor fx:id="textArea" prefWidth="800.0" HBox.hgrow="ALWAYS">
+    <ScrollPane>
+        <HBox>
+            <MyHtmlEditor fx:id="textArea" HBox.hgrow="ALWAYS">
 
-        </MyHtmlEditor>
-    </HBox>
+            </MyHtmlEditor>
+        </HBox>
+    </ScrollPane>
     <VBox fx:id="root" alignment="TOP_CENTER">
         <BorderPane fx:id="drawPlace" VBox.vgrow="ALWAYS">
             <top>
