--- a/desktopApp/src/main/resources/view/task/sortingWindow/main.fxml
+++ b/desktopApp/src/main/resources/view/task/sortingWindow/main.fxml
@@ -6,12 +6,15 @@
 <?import javafx.scene.text.Font?>
 <?import kurlyk.view.components.DraggingListView?>
 <?import kurlyk.view.components.MyHtmlEditor?>
+<?import javafx.scene.control.ScrollPane?>
 <VBox xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kurlyk.view.task.sortingWindow.SortingController">
-    <HBox>
-        <MyHtmlEditor fx:id="textArea" HBox.hgrow="ALWAYS">
+    <ScrollPane>
+        <HBox>
+            <MyHtmlEditor fx:id="textArea" HBox.hgrow="ALWAYS">
 
-        </MyHtmlEditor>
-    </HBox>
+            </MyHtmlEditor>
+        </HBox>
+    </ScrollPane>
     <VBox fx:id="root" alignment="TOP_CENTER">
         <HBox>
             <DraggingListView fx:id="itemsField" HBox.hgrow="ALWAYS" />
