--- a/desktopApp/src/main/resources/view/signInWindow/main.fxml
+++ b/desktopApp/src/main/resources/view/signInWindow/main.fxml
@@ -30,7 +30,12 @@
             <Font name="SansSerif Regular" size="18.0" />
          </font>
       </Label>
-      <Button fx:id="logInButton" disable="true" layoutX="83.0" layoutY="334.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="140.0" text="Войти">
+      <Button fx:id="logInButton" disable="true" layoutX="83.0" layoutY="334.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="160.0" text="Войти">
+         <font>
+            <Font name="SansSerif Regular" size="14.0" />
+         </font>
+      </Button>
+      <Button fx:id="registerButton" disable="false" layoutX="83.0" layoutY="370.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="160.0" text="Зарегистрироваться">
          <font>
             <Font name="SansSerif Regular" size="14.0" />
          </font>
